src/themes/FlamingParrot/css/utils/_sidebar.scss
/**
 * Copyright (c) Enalean, 2016-Present. All Rights Reserved.
 *
 * This file is a part of Tuleap.
 *
 * Tuleap is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * Tuleap is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
 */

@use "@tuleap/project-sidebar-internal";

tuleap-project-sidebar {
    --tuleap-project-sidebar-icon-font-family: "Font Awesome 5 Free";
    --tuleap-project-sidebar-icon-font-family-brands: "Font Awesome 5 Brands";

    position: fixed;
    top: var(--platform-banner-offset-height, 0);
    height: calc(100vh - var(--platform-banner-offset-height, 0px));
}

